# ProgParralProject

./: .gitignore  CMakeLists.txt  README.md
src/: bitmap.c  bitmap.h  edge-detect.c
